# MeeBlueReader

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DYNAMIC_UUID_DISCOVERY.md  IMPLEMENTATION_SUMMARY.md  Info.plist  Main.qml  README.md  USAGE_EXAMPLES.md  iOS_IBEACON_README.md  ibeaconscanner.h  ibeaconscanner_ios.mm  main.cpp  meebluereader.cpp  meebluereader.h  nativeblescanner.cpp  nativeblescanner.h
android/: AndroidManifest.xml
android/src/org/tarmoj/meeblue/: NativeBleScanner.java
